--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "material-ui": "^0.16.6",
     "radium": "^0.18.1",
     "react": "^15.4.1",
+    "react-d3": "^0.4.0",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
