--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^15.4.1",
     "react-d3": "^0.4.0",
     "react-dom": "^15.4.1",
+    "react-flexbox-grid": "^0.10.2",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
