--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.20.0",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.23.1",
     "fixed-data-table": "^0.6.0",
+    "flexboxgrid": "^6.3.1",
     "history": "^4.5.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
@@ -58,6 +62,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
-    "scroller": "0.0.3"
+    "scroller": "0.0.3",
+    "style-loader": "^0.13.1"
   }
 }
