--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "material-ui": "^0.16.6",
     "radium": "^0.18.1",
     "react": "^15.4.1",
+    "react-addons-update": "^15.4.1",
     "react-d3": "^0.4.0",
     "react-dom": "^15.4.1",
     "react-flexbox-grid": "^0.10.2",
